[FRONTEND] feature(css lib): adicionar shadcnui-vue ao projeto frontend

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,4 +1,13 @@
 {
+  
+  "compilerOptions": {
+    // ...
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+    // ...
+  },
   "files": [],
   "references": [
     {
