--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-vue-next": "^0.359.0",
     "pinia": "^2.1.7",
+    "radix-vue": "^1.5.3",
+    "shadcn-vue": "^0.10.2",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -28,11 +35,13 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.4.0",
     "vite": "^5.1.5",
     "vitest": "^1.3.1",
