fix: setup database in docker compose

--- a/backend/.env.dev.docker
+++ b/backend/.env.dev.docker
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://username:password@localhost:5432/database?schema=public"
+DATABASE_URL="postgresql://quack:quack@postgres:5432/quack?schema=public"
 TYPE=service_account
 PROJECT_ID=<your_project_id>
 PRIVATE_KEY_ID=<your_private_key_id>
