--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,11 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "start:dev": "nest start --watch",
+    "start:migrate:dev": "prisma migrate dev && nest start --watch",
     "start:prod": "node dist/main",
+    "start:migrate:prod": "prisma migrate dev && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
