--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,8 @@ services:
     volumes:
       - ./backend:/app
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
 
   frontend:
     build:
@@ -24,10 +25,12 @@ services:
     image: postgres
     ports:
       - "5432:5432"
-    # volumes:
-    #   - ./database:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: username
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: database
-
+      POSTGRES_USER: quack
+      POSTGRES_PASSWORD: quack
+      POSTGRES_DB: quack
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U quack"]
+      interval: 2s
+      timeout: 1s
+      retries: 20
