--- a/backend/.env.dev.docker
+++ b/backend/.env.dev.docker
@@ -1,12 +1,3 @@
 DATABASE_URL="postgresql://quack:quack@postgres:5432/quack?schema=public"
-TYPE=service_account
-PROJECT_ID=<your_project_id>
-PRIVATE_KEY_ID=<your_private_key_id>
-PRIVATE_KEY=<your_private_key>
-CLIENT_EMAIL=<your_client_email>
-CLIENT_ID=<your_client_id>
-AUTH_URI=https://accounts.google.com/o/oauth2/auth
-TOKEN_URI=https://oauth2.googleapis.com/token
-AUTH_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
-CLIENT_CERT_URL=<your_client_cert_url>
-UNIVERSE_DOMAIN=googleapis.com                 
+JWT_SECRET=<your_secret_here>
+
