--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
