[FRONTEND] feature(login): redirecionar para tela de home ao efetuar login

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "form": "^0.2.4",
+    "jwt-decode": "^4.0.0",
     "lucide-vue-next": "^0.359.0",
     "pinia": "^2.1.7",
     "radix-vue": "^1.5.3",
