--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@vee-validate/zod": "^4.12.6",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "form": "^0.2.4",
     "jwt-decode": "^4.0.0",
     "lucide-vue-next": "^0.359.0",
@@ -27,6 +29,7 @@
     "shadcn-vue": "^0.10.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "v-calendar": "^3.1.2",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
