[INFRA] bugfix(Dockerfile backend): instalar comando procps para o Sistema Operacional Debian Bullseye

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,9 @@ FROM node:20.11.1-bullseye-slim
 # Set the working directory inside the container
 WORKDIR /app
 
+# Install procps to ensure ps command is available
+RUN apt-get update && apt-get install -y procps
+
 # Copy the backend application files into the container
 COPY package.json ./
 COPY yarn.lock ./
