--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "v-calendar": "^3.1.2",
+    "vaul-vue": "^0.1.0",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
