--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.3.0",
+    "@nestjs/throttler": "^5.1.2",
     "@prisma/client": "5.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
