--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,16 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@testing-library/vue": "^8.1.0",
     "@vee-validate/zod": "^4.12.6",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "flush-promises": "^1.0.2",
     "form": "^0.2.4",
+    "happy-dom": "^14.11.0",
     "jwt-decode": "^4.0.0",
     "lucide-vue-next": "^0.359.0",
     "pinia": "^2.1.7",
@@ -55,7 +58,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.4.0",
     "vite": "^5.1.5",
-    "vitest": "^1.3.1",
+    "vitest": "^1.6.0",
     "vue-tsc": "^2.0.6"
   }
 }
