--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@pinia/testing": "^0.1.3",
     "@popperjs/core": "^2.11.8",
     "@testing-library/vue": "^8.1.0",
     "@vee-validate/zod": "^4.12.6",
