feat(notifications): criar setup do modulo de notifications

--- a/backend/.env.dev.docker
+++ b/backend/.env.dev.docker
@@ -2,3 +2,5 @@ DATABASE_URL="postgresql://quack:quack@postgres:5432/quack?schema=public"
 JWT_SECRET=<your_secret_here>
 ENABLE_CORS=true
 
+# Only required using Telegram sender
+TELEGRAM_TOKEN_SENDER=
