--- a/backend/.env.dev.local
+++ b/backend/.env.dev.local
@@ -4,3 +4,8 @@ ENABLE_CORS=true
 
 # Only required using Telegram sender
 TELEGRAM_TOKEN_SENDER=
+
+EMAIL_SENDER_AUTH_USER=
+EMAIL_SENDER_AUTH_PASS=
+EMAIL_SENDER_HOST=
+EMAIL_SENDER_FROM_ADDRESS=
